[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player_sFaces.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Audios/undertale-voice-sfx-generic-2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/UI/dialogueboxaddons/1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/DialogeBox.png" type="Texture" id=5]
[ext_resource path="res://Audios/undertale-voice-sfx-generic-1.ogg" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "1",
"speed": 0.0
}, {
"frames": [  ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]
resource_local_to_scene = true
antialiased = false
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 2 )

[node name="KinematicBody2D" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 192.0
margin_top = 328.0
margin_right = 770.0
margin_bottom = 480.0
texture = ExtResource( 5 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="NinePatchRect"]
position = Vector2( 289, 76 )
frames = SubResource( 1 )
animation = "0"

[node name="AnimatedSprite" type="AnimatedSprite" parent="NinePatchRect"]
position = Vector2( 80, 74 )
scale = Vector2( 2, 2 )
frames = ExtResource( 2 )
animation = "Chara"

[node name="Label" type="Label" parent="NinePatchRect"]
margin_left = 146.0
margin_top = 20.0
margin_right = 562.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generic1" type="AudioStreamPlayer2D" parent="NinePatchRect"]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="Generic2" type="AudioStreamPlayer2D" parent="NinePatchRect"]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.07
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
